--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,24 @@
-<a href="/auth/instagram">Login with Instagram</a>
+<body>
+
+<div class="icons" style="margin-top: 15%">
+	<p id="login">Welcome! How would you like to connect ?</p>
+
+		<div class="insta">
+			<a href="/auth/instagram"> <img src="http://nationalevents.cityofhope.org/images/content/pagebuilder/instagram.png" class="insta"/></a>
+			<!-- <div class="cap1"><p>Connect my Instagram</p></div> -->
+		</div>
+		
+		<div class="fb">
+			<a href="/auth/facebook"> <img src="http://nationalevents.cityofhope.org/images/content/pagebuilder/facebook-icon.png" class="fb"/></a>
+			<!-- <div class="cap2"><p>Connect my Facebook</p></div> -->
+		</div>
+
+
+	<!-- <p style="clear:both;"> -->
+
+		
+</div>
+
+</body>
+
+
