--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -4,6 +4,7 @@
 	<title>Assignment 1</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
 	
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -11,12 +12,14 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->        
+    <![endif]-->  
+      <link rel="stylesheet" type="text/css" href="css/login.css">      
       <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
       <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
 </head>
 
 <body>
+
 
     {{{body}}}    
     
