--- a/views/photos.handlebars
+++ b/views/photos.handlebars
@@ -1,3 +1,21 @@
-{{#each photos}}
-  <img src="{{url}}" class="img-responsive" class="img hashtag-img">
-{{/each}}
+<body>
+
+	<div class = "nav" align="center">
+		<button class="nav"  onclick="window.location.href='/login'">Home</button>
+			
+		<a href="/feed"> <img src="http://nationalevents.cityofhope.org/images/content/pagebuilder/instagram.png" width="50" height="50" /></a>
+			
+		<a href="/auth/facebook"> <img src="http://nationalevents.cityofhope.org/images/content/pagebuilder/facebook-icon.png" width="50" height="50" /></a>
+		
+	</div>
+
+	<h1 id = "title"><center>Photos</center></h1>
+
+
+	{{#each photos}}
+		<div class="feed" id="photos">
+	  <center><img src="{{url}}" class="img-responsive" class="img hashtag-img"></center>
+	  	</div>
+	{{/each}}
+
+</body>
