chaned ig link in feed

--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -4,7 +4,7 @@
 	<div class = "button" align="center">
 		<a href="/login"> <img src="https://cdn4.iconfinder.com/data/icons/basic-ui-elements/700/09_home-512.png" width="50" height="50" /></a>
 
-		<a href="/feed"> <img src="http://nationalevents.cityofhope.org/images/content/pagebuilder/instagram.png" width="50" height="50" /></a>
+		<a href="/igaccount"> <img src="http://nationalevents.cityofhope.org/images/content/pagebuilder/instagram.png" width="50" height="50" /></a>
 			
 		<a href="/auth/facebook"> <img src="http://nationalevents.cityofhope.org/images/content/pagebuilder/facebook-icon.png" width="50" height="50" /></a>
 		
