changed home btn

--- a/views/fbaccount.handlebars
+++ b/views/fbaccount.handlebars
@@ -2,7 +2,7 @@
 
 	<div class = "button" align="center">
 
-		<button class="nav"  onclick="window.location.href='/login'">Home</button>
+		<a href="/login"> <img src="https://cdn4.iconfinder.com/data/icons/basic-ui-elements/700/09_home-512.png" width="50" height="50" /></a>
 			
 		<a href="/auth/instagram"> <img src="http://nationalevents.cityofhope.org/images/content/pagebuilder/instagram.png" width="50" height="50" /></a>
 			
